# EVD-Surveillance-scripts-v1

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.dg/: telemetry.yaml
.dlt/: config.toml  secrets.example.toml
docs/: dagster.md  pipelines-and-destinations.md  resources.md
src/datasources/components/: __init__.py
src/datasources/defs/: schedules.py
src/datasources/defs/adam/: defs.yaml  evd_cases_loader.py  evd_travellers_loader.py
src/datasources/defs/cbs/: defs.yaml  loader.py
src/datasources/defs/echis/: defs.yaml  loader.py
src/datasources/defs/krcs_evd_quarantine/: daily_reviews_loader.py  defs.yaml  records_loader.py
src/datasources/defs/krcs_evd_screening/: defs.yaml  loader.py
src/datasources/defs/lims/: defs.yaml  loader.py
src/datasources/defs/mdharura/: defs.yaml  loader.py
src/datasources/defs/taifa_care_kenyaemr/: loader.py
src/datasources/defs/uhai/: defs.yaml  loader.py
tests/: mock_frappe.py
