[project]
name = "evd_surveillance_scripts"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.12",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "evd_surveillance_scripts"
registry_modules = [
    "evd_surveillance_scripts.components.*",
]


