[project]
name = "evd_surveillance_scripts"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.12",
    "dagster-dg-cli==1.13.12",
    "dagster-dlt==0.29.12",
    "dagster-webserver==1.13.12",
    "dlt[filesystem]==1.28.1",
    "duckdb>=1.5.4",
    "grpcio<1.80",
    "grpcio-health-checking<1.80",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasources"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "datasources"
registry_modules = [
    "datasources.components",
]


